2001-02-09  Keisuke Nishida  <kxn30@po.cwru.edu>

	* dump.c: Use double cells for update schedule.

2001-02-08  Keisuke Nishida  <kxn30@po.cwru.edu>

	* ports.c (scm_unread_char): Take an optional argument.

2001-02-08  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* modules.h (scm_selected_module, scm_current_module): Renamed
	scm_selected_module to scm_current_module to synchronize Scheme
	and C names.
	(scm_select_module, scm_set_current_module): Likewise.  Changed
	all uses.
	
	* ports.c (scm_port_for_each): Make a snapshot of the port table
	before iterating over it.  The table might change while the user
	code is running.  With the snapshot, the user can depend on the
	fact that each port that existed at the start of the iteration is
	encountered exactly once.  (ice-9 popen) depends on this.

2001-02-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* strings.h (SCM_STRING_MAX_LENGTH):  New macro.

	* strings.c (scm_makstr, scm_take_str, scm_make_string):  Added
	range checking for the size parameter.  Thanks to Martin
	Grabmueller for the hint.

	(scm_makstr):  Reordered string initialization to make interrupt
	deferring unnecessary.

	* vectors.c (scm_make_vector):  Fixed range checking.

2001-02-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* vectors.h (SCM_VECTOR_MAX_LENGTH):  New macro.

	* vectors.c (scm_make_vector, scm_c_make_vector):  Improved the
	checking of the size parameter for type correctness and valid
	range.  Thanks to Rob Browning for reporting the problem.  Instead
	of deferring interrupts, scm_remember_upto_here_1 is used.

2001-02-05  Keisuke Nishida  <kxn30@po.cwru.edu>

	* dump.c (scm_store_cell_object, scm_restore_cell_object): Removed.
	(scm_dump_cell_update): Removed.
	(scm_dump_update): Renamed from scm_dump_object_update.
	(scm_restore_string, scm_restore_bytes, scm_restore_word): Takes
	a pointer instead of returning a value.
	* keywords.c (keyword_undump): Updated.

2001-02-05  Keisuke Nishida  <kxn30@po.cwru.edu>
